user get, create and update model and endpoints inplemented
